Reporte pdf Arqueo 1.0

--- a/public/css/MentisMe.css
+++ b/public/css/MentisMe.css
@@ -2214,3 +2214,5 @@ ul.tab-nav>li>a>h6{
 .dispensers_list>label{
 	font-weight: bold;
 }
+.Usado{background-color: #55FF69;}
+.Registrado{background-color: #FFAB3D;}
