--- a/public/css/pdf_arqueo.css
+++ b/public/css/pdf_arqueo.css
@@ -4,8 +4,10 @@ html,body{margin:0;padding:0;font-family:calibri;}
 .contenido{width:645px;height:950px;margin-top:30px;margin-left:85px;padding-bottom:40px;}
 .membretado{font-size:14px;position:relative;height:80px;text-align:left;}
 .membretado>img{position:absolute;height:50px;top:0px;left:595px;}
-table{width:100%;font-size:14px;border-collapse:collapse;z-index:1;}
+table{width:645px;font-size:14px;border-collapse:collapse;z-index:1;}
 table>tbody>tr>td{vertical-align:top;height:18px;min-height:18px;}
+.td_foto{width: 200px;}
+.td_foto>img{max-height: 235px; max-width: 200px; position: absolute; right: 87px; top: 140px;border: 2px solid black;}
 .firma{
 	text-align: center;
 	padding-top: 50px;
@@ -13,6 +15,7 @@ table>tbody>tr>td{vertical-align:top;height:18px;min-height:18px;}
 
 .flotantes{position:relative;width:645px;height:0;}
 .flotantes>.pagina{top:950px;right:0;font-size:12px;position:absolute;}
+.flotantes>.impresion{top:935px;left:0;font-size:12px;position:absolute;}
 .flotantes>.marcadeagua{top:250px;left:1px;position:absolute;width: 644px;z-index: -1;}
 
 .bb{
